--- a/evaluation/evaluate_sinusoids.ipynb
+++ b/evaluation/evaluate_sinusoids.ipynb
@@ -2,7 +2,7 @@
       "cells": [
             {
                   "cell_type": "code",
-                  "execution_count": 1,
+                  "execution_count": null,
                   "metadata": {},
                   "outputs": [
                         {
@@ -35,9 +35,8 @@
                         "import numpy as np\n",
                         "import torch\n",
                         "\n",
-                        "plt.style.use(\"science\")\n",
+                        "sns.set_palette(\"rocket\", n_colors=10)\n",
                         "sns.set_style(\"whitegrid\")\n",
-                        "sns.set_palette(\"Dark2\")\n",
                         "\n",
                         "plt.rcParams[\"text.latex.preamble\"] = (\n",
                         "    \"\\\\usepackage{lmodern} \\\\usepackage{times} \\\\usepackage{amssymb}\"\n",
